引入webpack-dev-server

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,22 @@
     <title>webpack</title>
 </head>
 <body>
-    <button id="button">点我</button>
+    <h3>测试ES6语法</h3>
+    <ul id="test">
+        <li>
+            <span>let</span>
+            <span>----------------</span>
+            <button id="button">点我</button>
+        </li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul> 
+
+    
 </body>
 </html>
