拆分成按需要异步加载模块

--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,14 @@
         <li>
             <span>let</span>
             <span>----------------</span>
-            <button id="button">点我</button>
+            <button class="btn">点我</button>
         </li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+            <span>let</span>
+            <span>----------------</span>
+            <button class="btn">点我</button>
+        </li>
     </ul> 
 
-    
 </body>
 </html>
