--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,26 @@
 </head>
 <body>
     <h3>测试ES6语法</h3>
-    <ul id="test">
-        <li>
-            <span>let</span>
-            <span>----------------</span>
-            <button class="btn">点我</button>
-        </li>
-        <li>
-            <span>let</span>
-            <span>----------------</span>
-            <button class="btn">点我</button>
-        </li>
-    </ul> 
+   
+    <div>
+        <ul id="test">
+            <li>
+                <span>let</span>
+                <span>----------------</span>
+                <button class="btn">点我</button>
+            </li>
+            <li>
+                <span>const</span>
+                <span>----------------</span>
+                <button class="btn">点我</button>
+            </li>
+            <li>
+                <span>destructuring</span>
+                <span>----------------</span>
+                <button class="btn">点我</button>
+            </li>
+        </ul> 
+    </div>
 
 </body>
 </html>
