测试Symbol类型 函数扩展等语法

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,16 @@
                 <span>----------------</span>
                 <button class="btn">点我</button>
             </li>
+            <li>
+                <span>function</span>
+                <span>----------------</span>
+                <button class="btn">点我</button>
+            </li>
+            <li>
+                <span>symbol</span>
+                <span>----------------</span>
+                <button class="btn">点我</button>
+            </li>
         </ul> 
     </div>
 
