--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,11 @@
                 <span>----------------</span>
                 <button class="btn">点我</button>
             </li>
+            <li>
+                <span>Set和Map</span>
+                <span>----------------</span>
+                <button class="btn">点我</button>
+            </li>
         </ul> 
     </div>
 
