新增语法测试

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,16 @@
                 <span>----------------</span>
                 <button class="btn">点我</button>
             </li>
+            <li>
+                <span>iterator</span>
+                <span>----------------</span>
+                <button class="btn">点我</button>
+            </li>
+            <li>
+                <span>generator</span>
+                <span>----------------</span>
+                <button class="btn">点我</button>
+            </li>
         </ul> 
     </div>
 
